--- a/client/main.css
+++ b/client/main.css
@@ -1,1 +1,7 @@
 /* CSS declarations go here */
+/*
+
+Here it should go a little bit of css that works for the entire web page
+background, width, height, text, etc... 
+
+*/
